# bulk-snmptrap-tool

./: .travis.yml  README.md  bulk-snmptrap-tool.cabal  sample_config.ini  snmptrapper.cabal
src/: ASN1Trap.hs  Main.hs  ReadConfig.hs  SNMPTrapType.hs  SendTrap.hs
