name:                snmptrapper
version:             0.1.0.0
synopsis:            Tool that sends many SNMP traps for load test of SNMP manager
description:         Send SNMP traps by multi threads. Each thread is made by each section in configurations file. After specific time, each thread is stopped. It outputs the number of sent trap.
homepage:            https://github.com/IMOKURI/snmptrapper
license:             MIT
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable snmptrapper
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       ConfigFile,
                       MissingH,
                       asn1-encoding,
                       asn1-types,
                       bytestring,
                       cereal,
                       directory,
                       mtl,
                       network,
                       optparse-applicative,
                       parallel,
                       split,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

